--- a/style.css
+++ b/style.css
@@ -1,6 +1,17 @@
 /* Reset */
-body {
+body, p {
     margin: unset;
+}
+
+h1 {
+    margin: unset;
+    font-size: unset;
+    font-weight: unset;
+}
+
+/* Typography */
+:root {
+    font-family: 'montserrat';
 }
 
 /* Component */
@@ -14,8 +25,14 @@ body {
 
 .wrapper {
     box-shadow: inset 0 0 10px red;
-    height: 50vh;
+    min-height: 50vh;
     display: grid;
     justify-content: center;
     align-content: center;
+    padding: 20px;
+}
+
+.contents {
+    box-shadow: inset 0 0 10px blue;
+    max-width: 1080px;
 }
