--- a/style.css
+++ b/style.css
@@ -36,3 +36,35 @@ h1 {
     box-shadow: inset 0 0 10px blue;
     max-width: 1080px;
 }
+
+.contents_header {
+    display: flex;
+    align-items: center;
+}
+
+.contents_header h1 {
+    font-size: 40px;
+    width: 258px;
+}
+
+.contents_header div::before {
+    content: '';
+    display: block;
+    width: 90px;
+    height: 1px;
+    background-color: #C89DFF;
+    margin-left: 22px;
+    margin-right: 32px;
+}
+
+.contents_header div {
+    display: flex;
+    align-items: center;
+}
+
+.contents_header p {
+    width: 460px;
+    font-size: 14px;
+    line-height: 1.6em;
+    background-color: azure;
+}
