--- a/style.css
+++ b/style.css
@@ -44,7 +44,26 @@ h1 {
 
 .contents_header h1 {
     font-size: 40px;
+    line-height: 1.1em;
     width: 258px;
+    color: white;
+}
+
+.contents_header h1 strong {
+    position: relative;
+    z-index: 0;
+}
+
+.contents_header h1 strong::after {
+    content: '';
+    background-color: #FF4500;
+    display: block;
+    width: 100%;
+    height: 26px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    z-index: -1;
 }
 
 .contents_header div::before {
@@ -64,7 +83,7 @@ h1 {
 
 .contents_header p {
     width: 460px;
+    color: #C89DFF;
     font-size: 14px;
     line-height: 1.6em;
-    background-color: azure;
 }
