이미지 내부 글자 마크업 변경

--- a/style.css
+++ b/style.css
@@ -119,8 +119,7 @@ img {
     position: relative;
 }
 
-.card-img::before {
-    content: 'Rest';
+.card-img div {
     color: white;
     font-size: 32px;
     font-weight: 500;
