--- a/style.css
+++ b/style.css
@@ -115,25 +115,33 @@ img {
     display: flex;
 }
 
+.card:nth-child(2) {
+    flex-direction: row-reverse;
+    justify-content: space-between;
+}
+
 .card-img {
     position: relative;
 }
 
 .card-img div {
+    background-color: rgba(98, 48, 162, 0.5);
     color: white;
     font-size: 32px;
     font-weight: 500;
+    width: 100%;
+    height: 100%;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
+    left: 0;
+    text-align: center;
+    line-height: 148px;
 }
 
 .card-img img {
     width: 280px;
     height: 100%;
     object-fit: cover;
-    
 }
 
 .card-text h2 {
